--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.8",
+    "@tabler/icons-react": "^3.36.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "clsx": "^2.1.1",
     "lucide-react": "^0.561.0",
+    "motion": "^12.29.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.1",
+    "react-syntax-highlighter": "^16.1.0",
     "react-toastify": "^11.0.5",
-    "rsuite": "^5.83.0"
+    "rsuite": "^5.83.0",
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
